Separate tmux scripts
Signed-off-by: Pedro Miranda <pedrodotmc@gmail.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-files/sample-crypted.txt filter=git-crypt diff=git-crypt
+files/tmux/work.sh filter=git-crypt diff=git-crypt
+.gitattributes !filter !diff
