Update nix-home repository
Signed-off-by: Pedro Miranda <pedrodotmc@gmail.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 files/tmux/work.sh filter=git-crypt diff=git-crypt
+files/tmux/work_ta.sh filter=git-crypt diff=git-crypt
 .gitattributes !filter !diff
